# OrcaSlicerCoonfig

./: .replit  OrcaSlicer-Config-Manager.spec  README.md  build_mac.sh  build_mac_app.sh  build_windows.bat  build_windows_with_icon.bat  cli.py  cloud_storage.py  create_skull_icon.py  gui.py  main.py  orca_backup.py  pyproject.toml  replit.md  utils.py
